@@ -64,6 +64,7 @@ enum Status0Value
     STATUS_MAIN,
     STATUS_SHOW_LIVE_GAME,
     STATUS_LIVE_GAME_PAUSE,
+    STATUS_LIVE_GAME_CHANGE,
     STATUS_SHOW_TEAM_LIST,
     STATUS_SHOW_PLAYER_INFO,
     STATUS_BROWSE_TEAMS,
